Add utility script to update CHART_NODE_NAMES from nodes_log.csv
- Implemented a script that reads CHART_NODES from the .env file.
- Extracts corresponding node names from nodes_log.csv.
- Updates the .env file with the generated CHART_NODE_NAMES.
- Handles cases where node names are not found by falling back to node IDs.
- Includes error handling for file operations and CSV reading.

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@ ML_ENABLED=true                # Enable/disable machine learning features
 ML_MIN_DATA_POINTS=5           # Minimum data points needed for ML predictions
 ML_LEARNING_RATE=0.1           # Learning rate for bias correction
 
+# Chart generation configuration
+# Comma-separated list of node IDs to include in charts (subset of MONITORED_NODES)
+CHART_NODES="!2df67288,!a0cc8008"
+CHART_NODE_NAMES="TRUTZTURM Solar (TRZS),DL0TRZ Trutzturm Oppenheim (TRZT)"
+
 # File paths (relative to script directory)
 TELEMETRY_CSV="telemetry_log.csv"
 NODES_CSV="nodes_log.csv"
