Repository cleanup and organization
🧹 Major cleanup of repository structure:

Removed files:
- All generated chart files (20 PNG/SVG files) - now properly gitignored
- Legacy chart generator (generate_trutzturm_chart.py) - superseded by generic generators
- Empty/obsolete test scripts (9 files) - no longer needed
- Redundant documentation (CHART_USAGE.md, NODE_NAME_AUTOMATION.md) - consolidated

Enhanced .gitignore:
- Added patterns for generated chart files (*_chart.png, *_chart.svg)
- Added Python cache patterns (__pycache__, *.pyc)
- Added test file patterns (test_*.html, *_test_*)

Documentation:
- Added REPOSITORY_ORGANIZATION.md for file structure overview
- Consolidated chart documentation in TELEMETRY_CHARTS.md
- Maintained focused documentation structure

Repository now has clean, maintainable structure:
✅ 6 core scripts (3 main + 3 chart generators)
✅ 5 focused documentation files
✅ Proper gitignore for generated content
✅ 36 files removed from tracking

Future generated files will be automatically ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,16 @@ weather_predictions.json
 power_predictions.csv
 prediction_accuracy.csv
 
+# Generated chart files
+*_chart.png
+*_chart.svg
+*.png
+*.svg
+
+# Test files and temporary HTML
+test_*.html
+*_test_*
+
 # Temporary files
 /tmp/
 *.tmp
@@ -30,3 +40,8 @@ Thumbs.db
 .vscode/
 .idea/
 *.sublime-*
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
