feat: Add enhanced chart labels with real-time averages for telemetry data
- Implement short node name extraction for cleaner chart legends.
- Display real-time averages for battery level, voltage, and utilization metrics over 3h, 12h, and 24h periods.
- Introduce comprehensive telemetry and utilization charts with dynamic updates.
- Enhance chart legend format for better readability and context.

feat: Introduce multiple connection methods for Meshtastic devices

- Support for Serial, TCP, and Bluetooth Low Energy (BLE) connections.
- Configuration examples provided for each connection type.
- Automatic command generation based on selected connection method.
- Troubleshooting section added for common connection issues.

feat: Implement automated web deployment for telemetry dashboard

- Enable automatic copying of dashboard files to web server after telemetry collection.
- Configurable deployment settings in the .env file.
- Ensure proper permissions and ownership for deployed files.
- Provide error handling and informative messages during deployment.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
 # Meshtastic Telemetry Logger Configuration Example
 # Copy this file to .env and customize the values below
 
+# Meshtastic Connection Configuration
+# Choose ONE connection method by setting the appropriate variables
+MESHTASTIC_CONNECTION_TYPE=serial  # Options: serial, tcp, ble
+
+# Serial Connection (default)
+MESHTASTIC_SERIAL_PORT=auto        # auto = auto-detect, or specific port like /dev/ttyUSB0
+
+# TCP Connection (for WiFi/Ethernet connected devices)
+MESHTASTIC_TCP_HOST=192.168.1.100  # IP address of your Meshtastic device
+MESHTASTIC_TCP_PORT=4403           # Port (default: 4403)
+
+# Bluetooth Low Energy (BLE) Connection
+MESHTASTIC_BLE_ADDRESS=12:34:56:78:9A:BC  # MAC address of your Meshtastic device
+
 # Timeout settings (in seconds)
 TELEMETRY_TIMEOUT=300          # Timeout for telemetry requests (5 minutes)
 NODES_TIMEOUT=300              # Timeout for nodes list requests (5 minutes)
