Refactor code structure for improved readability and maintainability

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ TELEMETRY_TIMEOUT=300          # Timeout for telemetry requests (5 minutes)
 NODES_TIMEOUT=300              # Timeout for nodes list requests (5 minutes)
 WEATHER_TIMEOUT=300            # Timeout for weather integration (5 minutes)
 ML_TIMEOUT=300                 # Timeout for ML processing (5 minutes)
+CONNECTION_TIMEOUT=30          # Connection timeout (30 seconds)
+MAX_RETRIES=3                  # Maximum connection retries
+RETRY_INTERVAL=60              # Time to wait before retrying after failure (seconds)
 
 # Polling interval (how long to wait between runs)
 POLLING_INTERVAL=300           # 5 minutes between data collection cycles
@@ -43,17 +46,46 @@ LOG_TELEMETRY_REQUESTS=true    # Log individual telemetry requests
 
 # ML settings
 ML_ENABLED=true                # Enable/disable machine learning features
+ML_TIMEOUT=120                 # Timeout for ML operations (seconds)
 ML_MIN_DATA_POINTS=5           # Minimum data points needed for ML predictions
 ML_LEARNING_RATE=0.1           # Learning rate for bias correction
+ML_HISTORICAL_WINDOW=50        # Number of historical data points to analyze
+
+# Weather settings
+WEATHER_CACHE_TTL=3600         # Weather cache duration in seconds (3600 = 1 hour)
+
+# Network Activity News Settings
+NEWS_ENABLED=true              # Enable network activity news section
+NEWS_TIME_WINDOW=24            # Time window for news in hours (24 = last 24 hours)
+NEWS_MAX_HOPS=2                # Maximum hops to include in news (0=direct, 1=1 hop, 2=2 hops, etc.)
 
 # Chart generation configuration
 # Comma-separated list of node IDs to include in charts (subset of MONITORED_NODES)
 CHART_NODES="!2df67288,!a0cc8008"
 CHART_NODE_NAMES="TRUTZTURM Solar (TRZS),DL0TRZ Trutzturm Oppenheim (TRZT)"
+CHART_SIZE_MULTIPLIER=1.0      # Chart size multiplier (1.0 = default, 1.5 = 150% size)
+CHART_DPI=300                  # Chart resolution in DPI (dots per inch)
+CHART_FIGSIZE_WIDTH=16         # Chart width in inches
+CHART_FIGSIZE_HEIGHT=20        # Chart height in inches
 
 # File paths (relative to script directory)
 TELEMETRY_CSV="telemetry_log.csv"
 NODES_CSV="nodes_log.csv"
+HTML_OUTPUT="stats.html"
+POWER_PREDICTIONS_CSV="power_predictions.csv"
+PREDICTION_ACCURACY_CSV="prediction_accuracy.csv"
+WEATHER_PREDICTIONS_JSON="weather_predictions.json"
+
+# Logging Configuration
+LOG_LEVEL=INFO                 # Log level: DEBUG, INFO, WARN, ERROR
+LOG_TELEMETRY_REQUESTS=true    # Log individual telemetry requests
+LOG_TO_FILE=true               # Enable file logging
+ERROR_LOG="error.log"          # Error log file path
+
+# Data Retention (for automatic cleanup)
+MAX_TELEMETRY_DAYS=30          # Keep telemetry data for X days (0 = unlimited)
+MAX_LOG_SIZE_MB=100            # Maximum log file size before rotation
+BACKUP_OLD_DATA=true           # Backup old data before deletion
 NODES_LOG="nodes_log.txt"
 ERROR_LOG="error.log"
 HTML_OUTPUT="stats.html"
