Add web server functionality: implement web server script, control script, and configuration options

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,14 @@ LOG_TELEMETRY_REQUESTS=true    # Log individual telemetry requests
 LOG_TO_FILE=true               # Enable file logging
 ERROR_LOG="error.log"          # Error log file path
 
+# Web Server Configuration
+WEBSERVER_ENABLED=false        # Enable/disable web server (true/false)
+WEBSERVER_PORT=8080            # HTTP port for web server
+WEBSERVER_SSL_PORT=8443        # HTTPS port for web server
+WEBSERVER_SSL_CERT=server.crt  # SSL certificate file path
+WEBSERVER_SSL_KEY=server.key   # SSL private key file path
+WEBSERVER_MODE=both            # Server mode: http, https, or both
+
 # Data Retention (for automatic cleanup)
 MAX_TELEMETRY_DAYS=30          # Keep telemetry data for X days (0 = unlimited)
 MAX_LOG_SIZE_MB=100            # Maximum log file size before rotation
