Add optimized HTML generator for large datasets with progressive loading

--- a/.env.example
+++ b/.env.example
@@ -94,6 +94,12 @@ WEBSERVER_MODE=both            # Server mode: http, https, or both
 MAX_TELEMETRY_DAYS=30          # Keep telemetry data for X days (0 = unlimited)
 MAX_LOG_SIZE_MB=100            # Maximum log file size before rotation
 BACKUP_OLD_DATA=true           # Backup old data before deletion
+
+# Performance Optimization Settings
+MAX_DASHBOARD_RECORDS=1000     # Maximum telemetry records to process for dashboard (0 = unlimited)
+DASHBOARD_PAGINATION_SIZE=500  # Number of records per pagination chunk
+FAST_DASHBOARD_MODE=true       # Use optimized processing for large datasets
+PROGRESSIVE_LOADING=true       # Load dashboard progressively for better performance
 NODES_LOG="nodes_log.txt"
 ERROR_LOG="error.log"
 HTML_OUTPUT="stats.html"
